# entropy

./: .gitignore  Cargo.toml
beta/: Cargo.toml  build.rs
beta/src/: keystore.rs  lib.rs  peer.rs  reqres.proto  server.rs  vrf.rs
beta/src/codec/: mod.rs  wirehair_codec.rs
beta/src/eld/: mod.rs
beta/src/p2p/: behaviour.rs  client.rs  error.rs  mod.rs  utils.rs
src/: keystore.rs  main.rs  peer.rs  vrf.rs
