[package]
name = "beta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[dependencies]
actix = "0.13.2"
actix-web = "4.4.1"
actix-multipart = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "tracing"] }
env_logger = "0.11.1"
futures = "0.3.30"
bytes = "0.5.6"
reqwest = { version = "0.11.24", features = ["json"] }
rand = "0.8.5"
wirehair = { version = "0.1.0", path = "../wirehair" }
