[package]
edition = "2021"
name = "beta"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[dependencies]
actix = "0.13.2"
actix-multipart = "0.6.1"
actix-web = "4.4.1"
anyhow = "1.0.80"
bytes = "0.5.6"
cid = "0.11.1"
clap = {version = "4.5.1", features = ["derive"]}
ed25519-dalek = {version = "2.0.0", features = ["serde", "rand_core"]}
env_logger = "0.11.1"
futures = "0.3.30"
getrandom = "^0.2.12"
libp2p = {version = "0.53.2", features = ["tokio", "cbor", "dns", "kad", "noise", "macros", "request-response", "tcp", "yamux", "gossipsub", "identify", "ping"]}
log = "0.4.21"
merlin = {version = "3.0.0", default-features = false}
prost = "0.12"
rand = "0.8.5"
rayon = "1.9.0"
reqwest = {version = "0.11.24", features = ["json"]}
schnorrkel = "0.11.4"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_json = "1"
tokio = {version = "1.36.0", features = ["macros", "rt-multi-thread", "tracing"]}
wirehair = {version = "0.1.0", path = "../wirehair"}
thiserror = "1.0.58"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
prost-build = "0.12.3"

[features]
gossipsub = []